# rust_ddd_auth_api

./: .env.example  Cargo.toml  docker-compose.yaml
src/: main.rs  state.rs
src/application/: mod.rs
src/application/dtos/: auth_dto.rs  mod.rs  register_user_dto.rs
src/application/http/handlers/: auth_handler.rs  me_handler.rs  mod.rs  register_user.rs
src/application/http/middlewares/: auth_middleware.rs
src/application/http/routes/: auth.rs  users.rs
src/application/usecases/: auth.rs  mod.rs  register_user.rs
src/application/usecases/errors/: auth_error.rs  mod.rs  user_error.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/infra/: mod.rs
src/infra/database/: connection.rs
src/infra/database/entities/: user_entity.rs
src/infra/database/migrations/src/: m20220101_000001_create_table.rs
src/infra/database/repositories/: in_memory_user_repository.rs  mod.rs  seaorm_user_repository.rs
src/infra/repositories/: in_memory_user_repository.rs
src/infra/security/: jwt.rs  mod.rs  password_hasher.rs
