[package]
name = "rust_ddd_auth_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
regex = "1.11.1"

jsonwebtoken = {version = "9", default-features = false }
serde = {version = "1.0", features = ["derive"] }

async-trait = "0.1.88"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]